--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-20  Djihed Afifi <djihed@gmail.com> 
+
+	* ar.po: Updated Arabic Translation by Djihed Afifi.
+
 2007-02-24  Matic Zgur  <mr.zgur@gmail.com>
 
 	* sl.po: Added Slovenian translation.
