--- a/po/oc.po
+++ b/po/oc.po
@@ -1,21 +1,24 @@
+# translation of oc.po to Occitan
 # Occitan Translation of drwright
-# Copyright (C) 2002-2006 Free Software Foundation, Inc.
+# Copyright (C) 2002-2006, 2007 Free Software Foundation, Inc.
 # This file is distributed under the same license as the drwright package.
 #
 # Yannig MARCHEGAY (yannig@marchegay.org) - 2006-2007
 #
+# Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: DrWright 0.18\n"
+"Project-Id-Version: oc\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-10-13 17:46+0200\n"
-"PO-Revision-Date: 2007-08-19 17:23+0200\n"
+"PO-Revision-Date: 2007-11-20 14:29+0100\n"
 "Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
-"Language-Team: Occitan (post 1500) <ubuntu-l10n-oci@lists.ubuntu.com>\n"
+"Language-Team: Occitan <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: KBabel 1.11.4\n"
 
 #: ../data/glade/drw-preferences.glade.h:1
 msgid "    "
@@ -141,7 +144,7 @@ msgstr ""
 
 #: ../src/drwright.c:625
 msgid "Quit"
-msgstr "Sortir"
+msgstr "Quitar"
 
 #: ../src/drwright.c:674
 msgid "About DrWright"
@@ -172,3 +175,4 @@ msgstr ""
 #: ../src/drw-break-window.c:251
 msgid "Take a break!"
 msgstr "Arrestatz-vos un pauc !"
+
