--- a/po/oc.po
+++ b/po/oc.po
@@ -1,23 +1,22 @@
-# translation of oc.po to Occitan
+# Translation of oc.po to Occitan
 # Occitan Translation of drwright
 # Copyright (C) 2002-2006, 2007 Free Software Foundation, Inc.
 # This file is distributed under the same license as the drwright package.
 #
-# Yannig MARCHEGAY (yannig@marchegay.org) - 2006-2007
-#
-# Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>, 2007.
+# Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>, 2006-2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: oc\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-10-13 17:46+0200\n"
-"PO-Revision-Date: 2007-11-21 19:16+0100\n"
+"POT-Creation-Date: 2007-12-27 13:28+0100\n"
+"PO-Revision-Date: 2007-12-23 11:43+0100\n"
 "Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
 "Language-Team: Occitan <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: KBabel 1.11.4\n"
 
 #: ../data/glade/drw-preferences.glade.h:1
 msgid "    "
@@ -96,7 +95,7 @@ msgstr "/_Activat"
 
 #: ../src/drwright.c:139
 msgid "/_Take a Break"
-msgstr "/_Arrestatz-vos un pauc !"
+msgstr "/_Arrestatz-vos un pauc"
 
 #: ../src/drwright.c:141
 msgid "/_Preferences"
@@ -174,4 +173,3 @@ msgstr ""
 #: ../src/drw-break-window.c:251
 msgid "Take a break!"
 msgstr "Arrestatz-vos un pauc !"
-
