Updated Nepali Translation
svn path=/trunk/; revision=136

--- a/po/ne.po
+++ b/po/ne.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: drwright.HEAD.ne\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-05-15 10:18+0200\n"
+"POT-Creation-Date: 2007-01-02 04:04+0000\n"
 "PO-Revision-Date: 2006-06-05 11:08+0545\n"
 "Last-Translator: Mahesh subedi <submanesh@hotmail.com>\n"
 "Language-Team: Nepali <info@mpp.org.np>\n"
@@ -91,9 +91,9 @@ msgid ""
 "to have a notification area on your panel. You can add it by right-clicking "
 "on your panel and choose 'Add to panel -> Utilities -> Notification area'."
 msgstr ""
-"ड्रराइटले सूचना क्षेत्र सूचना प्रदर्शन गर्न प्रयोग गरेको छ। तपाईँको फलकमा सूचना "
-"क्षेत्र छैन जस्तो छ। तपाईँ यसलाई फलकमा दायाँ-क्लिक गरेर 'फलकमा जोड्नुहोस् -> युटिलिटिहरू > "
-"सूचना क्षेत्र' छानेर थप गर्न सक्नुहुन्छ।"
+"ड्रराइटले सूचना क्षेत्र सूचना प्रदर्शन गर्न प्रयोग गरेको छ। तपाईँको फलकमा सूचना क्षेत्र छैन "
+"जस्तो छ। तपाईँ यसलाई फलकमा दायाँ-क्लिक गरेर 'फलकमा जोड्नुहोस् -> युटिलिटिहरू > सूचना "
+"क्षेत्र' छानेर थप गर्न सक्नुहुन्छ।"
 
 #: ../src/drwright.c:138
 msgid "/_Enabled"
@@ -175,4 +175,3 @@ msgstr "विश्राम पछि सार्नुहोस्"
 #: ../src/drw-break-window.c:251
 msgid "Take a break!"
 msgstr "विश्राम लिनुहोस् !"
-
