--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-08  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation.
+
 2008-02-14  Pawan Chitrakar <chautari@gmail.com>
 
 	* ne.po: Updated Nepali Translation.
