Fixes in Brazilian Portuguese translation.
2008-03-08  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>

	* pt_BR.po: Fixes in Brazilian Portuguese translation.

svn path=/trunk/; revision=139

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: DrWright\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-03-08 13:56-0300\n"
-"PO-Revision-Date: 2008-03-08 13:58-0300\n"
+"PO-Revision-Date: 2008-03-08 14:04-0300\n"
 "Last-Translator: Leonardo Ferreira Fontenelle <leo.fontenlle@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <gnome-l10n-br@listas.cipsga.org.br>\n"
 "MIME-Version: 1.0\n"
@@ -57,7 +57,7 @@ msgstr "Frase opcional a ser usada para adiamento de pausa"
 
 #: ../data/glade/drw-preferences.glade.h:11
 msgid "_Allow postponing of breaks"
-msgstr "_Permitir adiamento de pausas"
+msgstr "Permitir _adiamento de pausas"
 
 #: ../data/glade/drw-preferences.glade.h:12
 msgid "_Break interval lasts"
@@ -65,11 +65,11 @@ msgstr "_Pausa com duração de"
 
 #: ../data/glade/drw-preferences.glade.h:13
 msgid "_Warning time is"
-msgstr "_Aviso com duração de"
+msgstr "A_viso com duração de"
 
 #: ../data/glade/drw-preferences.glade.h:14
 msgid "_Work interval lasts"
-msgstr "_Trabalho com duração de</b>"
+msgstr "_Trabalho com duração de"
 
 #: ../data/glade/drw-preferences.glade.h:15
 msgid "minutes"
@@ -155,7 +155,7 @@ msgstr "Um lembrete de suas pausas ao utilizar o computador."
 
 #: ../src/drwright.c:700
 msgid "Written by Richard Hult &lt;richard@imendio.com&gt;"
-msgstr "Escrito por Richard Hult &lt;rhult@codefactory.se&gt;"
+msgstr "Escrito por Richard Hult &lt;richard@imendio.com&gt;"
 
 #: ../src/drwright.c:701
 msgid "Eye candy added by Anders Carlsson"
@@ -171,7 +171,7 @@ msgstr "_Adiar Pausa"
 
 #: ../src/drw-break-window.c:251
 msgid "Take a break!"
-msgstr "Faça uma parada!"
+msgstr "Faça uma pausa!"
 
 #~ msgid "Break coming up!"
 #~ msgstr "Lá vem uma pausa!"
