--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2008-03-08  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>
 
+	* pt_BR.po: Fixes in Brazilian Portuguese translation.
+
+2008-03-08  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>
+
 	* pt_BR.po: Updated Brazilian Portuguese translation.
 
 2008-02-14  Pawan Chitrakar <chautari@gmail.com>
