Updated Polish translation by Piotr Drąg
2009-01-12  Wadim Dziedzic  <wdziedzic@aviary.pl>

	* pl.po: Updated Polish translation by Piotr Drąg

svn path=/trunk/; revision=141

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-12  Wadim Dziedzic  <wdziedzic@aviary.pl>
+
+	* pl.po: Updated Polish translation by Piotr Drąg
+
 2008-08-29  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es.po: Updated Spanish translation
