--- a/NEWS
+++ b/NEWS
@@ -1,13 +1,4 @@
-DrWright 0.16
-=============
+Typing Break 2.33.0
+===================
 
-* Bug fixes
-* Updated translations
-
-DrWright 0.15
-=============
-
-* Unlocking feature
-* Cleaned up preferences dialog
-* Handle suspend, e.g. power saving
-* Updated translations (da, de, zh_TW, es)
+Ressurrected!
