--- a/po/es.po
+++ b/po/es.po
@@ -5,8 +5,6 @@
 # By Nicols Lichtmaier <nick@technisys.com.ar>
 # Francisco Javier F. Serrador <serrador@arrakis.es>, 2003.
 #
-# Jorge González <jorgegonz@svn.gnome.org>, 2008.
-# Jorge González <jorgegonz@svn.gnome.org>, 2008.
 # #-#-#-#-#  es.po (gnome-settings-daemon.HEAD)  #-#-#-#-#
 # translation of gnome-settings-daemon.HEAD.po to Español
 # Copyright © 1999-2002, 2006, 2007, 2008 Free Software Foundation, Inc.
@@ -20,7 +18,6 @@
 # Pablo Gonzalo del Campo <pablodc@bigfoot.com>, 2002,2003.
 # Francisco Javier F. Serrador <serrador@cvs.gnome.org>, 2003, 2004, 2005, 2006.
 # Claudio Saavedra <csaavedra@alumnos.utalca.cl>, 2007.
-# Jorge González <jorgegonz@svn.gnome.org>, 2007, 2008, 2009, 2010.
 #
 # #-#-#-#-#  es.po (gnome-control-center.HEAD)  #-#-#-#-#
 # translation of gnome-control-center.HEAD.po to Español
@@ -35,21 +32,21 @@
 # Pablo Gonzalo del Campo <pablodc@bigfoot.com>, 2002,2003.
 # Francisco Javier F. Serrador <serrador@cvs.gnome.org>, 2003, 2004, 2005, 2006.
 # Claudio Saavedra <csaavedra@alumnos.utalca.cl>, 2007.
-# Jorge González <jorgegonz@svn.gnome.org>, 2007, 2008, 2009, 2010.
+# Jorge González <jorgegonz@svn.gnome.org>, 2008, 2007, 2009, 2010.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-control-center.HEAD\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-11-20 19:26+0100\n"
-"PO-Revision-Date: 2010-07-18 12:35+0200\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
+"product=drwright&component=general\n"
+"POT-Creation-Date: 2010-11-20 22:13+0000\n"
+"PO-Revision-Date: 2010-12-02 19:15+0100\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
 "#-#-#-#-#  es.po (drwright.HEAD)  #-#-#-#-#\n"
 "X-Generator: KBabel 1.0.2\n"
 "#-#-#-#-#  es.po (gnome-settings-daemon.HEAD)  #-#-#-#-#\n"
@@ -89,15 +86,8 @@ msgid "_Take a Break"
 msgstr "_Tomar un descanso"
 
 #: ../src/drwright.c:504
-#, fuzzy
 msgid "Disabled"
-msgstr ""
-"#-#-#-#-#  es.po (drwright.HEAD)  #-#-#-#-#\n"
-"Deshabilitado\n"
-"#-#-#-#-#  es.po (gnome-settings-daemon.HEAD)  #-#-#-#-#\n"
-"Desactivado\n"
-"#-#-#-#-#  es.po (gnome-control-center.HEAD)  #-#-#-#-#\n"
-"Desactivado"
+msgstr "Desactivado"
 
 #: ../src/drwright.c:513
 #, c-format
@@ -117,13 +107,9 @@ msgid "Take a break now (next in less than one minute)"
 msgstr "Descansar ahora (el siguiente en menos de un minuto)"
 
 #: ../src/drwright.c:523
-#, fuzzy, c-format
+#, c-format
 msgid "Less than one minute until the next break"
-msgstr ""
-"#-#-#-#-#  es.po (drwright.HEAD)  #-#-#-#-#\n"
-"Menos de un minuto hasta el siguiente descanso\n"
-"#-#-#-#-#  es.po (gnome-control-center.HEAD)  #-#-#-#-#\n"
-"Menos de un minuto hasta su siguiente descanso"
+msgstr "Menos de un minuto hasta el siguiente descanso"
 
 #: ../src/drwright.c:611
 #, c-format
@@ -139,22 +125,12 @@ msgid "Written by Richard Hult <richard@imendio.com>"
 msgstr "Escrito por Richard Hult <richard@imendio.com>"
 
 #: ../src/drwright.c:629
-#, fuzzy
 msgid "Eye candy added by Anders Carlsson"
-msgstr ""
-"#-#-#-#-#  es.po (drwright.HEAD)  #-#-#-#-#\n"
-"Interfaz más agradable añadida por Anders Carlsson\n"
-"#-#-#-#-#  es.po (gnome-control-center.HEAD)  #-#-#-#-#\n"
-"Vistosidad agregada por Anders Carlsson"
+msgstr "Interfaz más agradable añadida por Anders Carlsson"
 
 #: ../src/drwright.c:638
-#, fuzzy
 msgid "A computer break reminder."
-msgstr ""
-"#-#-#-#-#  es.po (drwright.HEAD)  #-#-#-#-#\n"
-"Un recordatorio para tomar descansos.\n"
-"#-#-#-#-#  es.po (gnome-control-center.HEAD)  #-#-#-#-#\n"
-"Un recordatorio para los descansos frente a la computadora."
+msgstr "Un recordatorio para los descansos frente al equipo."
 
 #: ../src/drwright.c:640
 msgid "translator-credits"
@@ -182,43 +158,43 @@ msgstr "¡Tómese un descanso!"
 #: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:1
 msgid "Number of minutes of typing time before break mode starts"
 msgstr ""
+"Número de minutos del tiempo de tecleo antes de que el modo de descanso se "
+"active"
 
 #: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:2
 msgid "Number of minutes that the typing break should last"
-msgstr ""
+msgstr "Número de minutos que descanso de tecleo debería durar"
 
 #: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:3
 msgid "Phrase to unlock the break screen with"
-msgstr ""
+msgstr "Frase para desbloquear la pantalla de pausa"
 
 #: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:4
 msgid "Whether the settings daemon should activate the typing break plugin"
 msgstr ""
+"Indica si el demonio de configuración debería activar el complemento de "
+"descanso de tecleo"
 
 #: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:5
-#, fuzzy
 msgid "Whether the typing break can be postponed"
-msgstr "Indica si el lector de pantalla está activado."
+msgstr "Indica si el descanso de tecleo se puede posponer"
 
 #: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:6
-#, fuzzy
 msgid "Whether typing break is enabled"
-msgstr "Indica si el lector de pantalla está activado."
+msgstr "Indica si el descanso de tecleo está activado"
 
 #: ../src/gnome-typing-break-panel.desktop.in.in.h:1
-#, fuzzy
 msgid "Typing Break Preferences"
-msgstr "Descanso de escritura"
+msgstr "Preferencias del descanso de tecleo"
 
 #: ../src/gnome-typing-break-panel.desktop.in.in.h:2
-#, fuzzy
 msgid "Typing Break preferences panel"
-msgstr "Preferencias del panel de ejemplo"
+msgstr "Panel de preferencias del descanso de tecleo"
 
 #. Translators: those are keywords for the example control-center panel
 #: ../src/gnome-typing-break-panel.desktop.in.in.h:4
 msgid "Typing;Break;RSI;Workrave;"
-msgstr ""
+msgstr "Teclear;Descanso;Pausa;Escribir"
 
 #: ../src/drwright-panel.glade.h:1
 msgid "_Allow postponing of breaks"
