--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Typing Break 2.91.1
+===================
+
+* Translation updates
+* Build with latest gtk3
+* Bug fixes: #621640, #638218, #627194
+
 Typing Break 2.91.0
 ===================
 
