--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,13 @@
+Typing Break 2.91.91
+====================
+
+* Use notifications instead of status icon (#643535, Christopher Aillon)
+* Use the 'Personal' category for the control centre panel (#643143, Christopher Aillon)
+* Translation updates
+
 Typing Break 2.91.90
 ====================
+
 * Translation updates
 * Fix a critical warning in the control centre panel (#642340)
 * Some gcc 4.6 warning fixes (#642339, Christopher Aillon)
