--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ Typing Break 2.91.91
 
 * Use notifications instead of status icon (#643535, Christopher Aillon)
 * Use the 'Personal' category for the control centre panel (#643143, Christopher Aillon)
+* Update control centre panel text (#644051, Christopher Aillon)
 * Translation updates
 
 Typing Break 2.91.90
