--- a/po/fr.po
+++ b/po/fr.po
@@ -1,118 +1,73 @@
 # French Translation of drwright
-# Copyright (C) 2002-2010 Free Software Foundation, Inc.
+# Copyright (C) 2002-2011 Free Software Foundation, Inc.
 # This file is distributed under the same license as the drwright package.
 #
 # Jean Schurger <yshark@schurger.org>, 2002.
 # Baptiste MILLE-MATHIAS <bmm80@ifrance.com>, 2003.
 # Stéphane Raimbault <raimbault.stephane@free.fr>, 2003.
 # Emmanuel Andry <eandry@free.fr>, 2006.
-# Claude Paroz <claude@2xlibre.net>, 2010.
+# Claude Paroz <claude@2xlibre.net>, 2010-2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: drwright fr master\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-03-01 20:22+0100\n"
-"PO-Revision-Date: 2010-11-21 20:23+0100\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
+"product=drwright&component=general\n"
+"POT-Creation-Date: 2011-03-06 23:25+0000\n"
+"PO-Revision-Date: 2011-03-12 14:14+0100\n"
 "Last-Translator: Claude Paroz <claude@2xlibre.net>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n>1;\n"
 
-#: ../../../po/../src/main.c:61
+#: ../src/main.c:40
 msgid "Enable debugging code"
 msgstr "Activer le code de débogage"
 
-#: ../../../po/../src/main.c:63
-msgid "Don't check whether the notification area exists"
-msgstr "Ne pas vérifier si la zone de notification existe"
-
-#: ../../../po/../src/main.c:87
+#: ../src/main.c:64
 msgid "Typing Monitor"
 msgstr "Moniteur de saisie"
 
-#: ../../../po/../src/main.c:103
-msgid ""
-"The typing monitor uses the notification area to display information. You "
-"don't seem to have a notification area on your panel. You can add it by "
-"right-clicking on your panel and choosing 'Add to panel', selecting "
-"'Notification area' and clicking 'Add'."
-msgstr ""
-"Le moniteur de saisie utilise la zone de notification pour afficher les "
-"informations. Vous ne semblez pas avoir de zone de notification dans votre "
-"tableau de bord. Vous pouvez en ajouter une par un clic droit sur votre "
-"tableau de bord, puis choisissez « Ajouter au tableau de bord », "
-"sélectionnez « Zone de notification » et cliquez sur « Ajouter »."
+#: ../src/drwright.c:168
+msgid "Typing Break Reminder"
+msgstr "Rappel de la pause de saisie"
 
-#: ../../../po/../src/drwright.c:123
-msgid "_Take a Break"
-msgstr "_Faire une pause"
-
-#: ../../../po/../src/drwright.c:441
-msgid "Disabled"
-msgstr "Désactivé"
-
-#: ../../../po/../src/drwright.c:448
+#: ../src/drwright.c:171
 #, c-format
-msgid "%d minute until the next break"
-msgid_plural "%d minutes until the next break"
-msgstr[0] "%d minute avant la prochaine pause"
-msgstr[1] "%d minutes avant la prochaine pause"
+msgid "Approximately %d minute to the next break."
+msgid_plural "Approximately %d minutes to the next break."
+msgstr[0] "Environ %d minute avant la prochaine pause"
+msgstr[1] "Environ %d minutes avant la prochaine pause"
 
-#: ../../../po/../src/drwright.c:452
-#, c-format
-msgid "Less than one minute until the next break"
-msgstr "Moins d'une minute avant la prochaine pause"
+#: ../src/drwright.c:177
+msgid "Less than one minute to the next break."
+msgstr "Moins d'une minute avant la prochaine pause."
 
-#: ../../../po/../src/drwright.c:553
-#, c-format
-msgid ""
-"Unable to bring up the typing break properties dialog with the following "
-"error: %s"
-msgstr ""
-"Impossible d'afficher la boîte de dialogue de propriétés de fin de pause "
-"avec l'erreur suivante : %s"
+#: ../src/drwright.c:189
+msgid "Settings…"
+msgstr "Paramètres…"
 
-#: ../../../po/../src/drwright.c:572
-msgid "Written by Richard Hult <richard@imendio.com>"
-msgstr "Écrit par Richard Hult <richard@imendio.com>"
+#: ../src/drwright.c:193
+msgid "Take Break Now"
+msgstr "Faites une pause maintenant"
 
-#: ../../../po/../src/drwright.c:573
-msgid "Eye candy added by Anders Carlsson"
-msgstr "Amélioration esthétique par Anders Carlsson"
-
-#: ../../../po/../src/drwright.c:582
-msgid "A computer break reminder."
-msgstr "Un outil pour vous aider à prendre des pauses."
-
-#: ../../../po/../src/drwright.c:584
-msgid "translator-credits"
-msgstr ""
-"Jean Schurger <yshark@schurger.org>, 2002\n"
-"Baptiste MILLE-MATHIAS <bmm80@ifrance.com>, 2003\n"
-"Stéphane Raimbault <raimbault.stephane@free.fr>, 2003\n"
-"Emmanuel Andry <eandry@free.fr>, 2006"
-
-#: ../../../po/../src/drw-break-window.c:189
+#: ../src/drw-break-window.c:189
 msgid "_Postpone Break"
 msgstr "_Différer la pause"
 
-#: ../../../po/../src/drw-break-window.c:234
+#: ../src/drw-break-window.c:234
 msgid "Take a break!"
 msgstr "Faites une pause !"
 
 #: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:1
-#, fuzzy
 msgid "Number of seconds of typing time before break mode starts"
-msgstr "Nombre de minutes de temps de saisie avant le début du mode pause"
+msgstr "Nombre de secondes de temps de saisie avant le début du mode pause"
 
 #: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:2
-#, fuzzy
 msgid "Number of seconds that the typing break should last"
-msgstr "Durée de la pause de saisie en minutes"
+msgstr "Durée de la pause de saisie en secondes"
 
 #: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:3
 msgid "Phrase to unlock the break screen with"
@@ -120,7 +75,7 @@ msgstr "Phrase de déverrouillage de l'écran de pause"
 
 #: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:4
 msgid "Priority to use for this plugin"
-msgstr ""
+msgstr "Priorité à utiliser pour ce grffon"
 
 #: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:5
 msgid "Whether the settings daemon should activate the typing break plugin"
@@ -137,12 +92,12 @@ msgid "Whether typing break is enabled"
 msgstr "Indique si la pause de saisie est activée"
 
 #: ../src/gnome-typing-break-panel.desktop.in.in.h:1
-msgid "Typing Break Preferences"
-msgstr "Préférences de la pause de saisie"
+msgid "Change typing break settings"
+msgstr "Modifier les paramètres de la pause de saisie"
 
 #: ../src/gnome-typing-break-panel.desktop.in.in.h:2
-msgid "Typing Break preferences panel"
-msgstr "Panneau de préférences de la pause de saisie"
+msgid "Typing Break"
+msgstr "Pause de saisie"
 
 #. Translators: those are keywords for the example control-center panel
 #: ../src/gnome-typing-break-panel.desktop.in.in.h:4
@@ -164,13 +119,3 @@ msgstr "_Verrouiller l'écran pour forcer une pause"
 #: ../src/drwright-panel.glade.h:4
 msgid "_Work interval lasts:"
 msgstr "La période de _travail dure :"
-
-#~ msgid "Take a break now (next in %dm)"
-#~ msgstr "Faites une pause maintenant (la prochaine est dans %d min)"
-
-#~ msgid "Take a break now (next in less than one minute)"
-#~ msgstr ""
-#~ "Prendre une pause maintenant (moins d'une minute avant la prochaine)"
-
-#~ msgid "minutes"
-#~ msgstr "minutes"
