--- a/po/de.po
+++ b/po/de.po
@@ -41,104 +41,63 @@
 # Wolfgang Stöggl <c72578@yahoo.de>, 2009.
 # Mario Blättermann <mariobl@gnome.org>, 2010.
 # Christian Kirbach <Christian.Kirbach@googlemail.com>, 2009, 2010.
+# Markus <marqus@gmx.net>, 2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: drwright master\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-03-01 20:22+0100\n"
-"PO-Revision-Date: 2011-02-26 21:45+0100\n"
-"Last-Translator: Mario Blättermann <mariobl@gnome.org>\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
+"product=drwright&keywords=I18N+L10N&component=general\n"
+"POT-Creation-Date: 2011-03-20 02:20+0000\n"
+"PO-Revision-Date: 2011-03-26 01:33+0100\n"
+"Last-Translator: Markus <marqus@gmx.net>\n"
 "Language-Team: Deutsch <gnome-de@gnome.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "X-Generator: KAider 0.1\n"
 "X-Poedit-Language: German\n"
 "X-Poedit-Country: GERMANY\n"
 
-#: ../../../po/../src/main.c:61
+#: ../src/main.c:40
 msgid "Enable debugging code"
 msgstr "Debugging-Code aktivieren"
 
-#: ../../../po/../src/main.c:63
-msgid "Don't check whether the notification area exists"
-msgstr "Nicht prüfen, ob ein Benachrichtigungsfeld vorhanden ist"
-
-#: ../../../po/../src/main.c:87
+#: ../src/main.c:64
 msgid "Typing Monitor"
 msgstr "Tippüberwachung"
 
-#: ../../../po/../src/main.c:103
-msgid ""
-"The typing monitor uses the notification area to display information. You "
-"don't seem to have a notification area on your panel. You can add it by "
-"right-clicking on your panel and choosing 'Add to panel', selecting "
-"'Notification area' and clicking 'Add'."
-msgstr ""
-"Die Tippüberwachung verwendet das Benachrichtigungsfeld, um Informationen "
-"anzuzeigen. Auf Ihrem Panel scheint sich kein Benachrichtigungsfeld zu "
-"befinden. Sie können es hinzufügen, indem Sie auf Ihr Panel rechtsklicken, "
-"»Zum Panel hinzufügen« auswählen, im folgenden Dialog das "
-"»Benachrichtigungsfeld« markieren und anschließend »Hinzufügen« anklicken."
+#: ../src/drwright.c:168
+msgid "Typing Break Reminder"
+msgstr "Tipppausen-Erinnerung"
 
-#: ../../../po/../src/drwright.c:123
-msgid "_Take a Break"
-msgstr "Eine _Pause machen"
-
-#: ../../../po/../src/drwright.c:441
-msgid "Disabled"
-msgstr "Deaktiviert"
-
-#: ../../../po/../src/drwright.c:448
+#: ../src/drwright.c:171
 #, c-format
-msgid "%d minute until the next break"
-msgid_plural "%d minutes until the next break"
-msgstr[0] "%d Minute bis zur nächsten Pause"
-msgstr[1] "%d Minuten bis zur nächsten Pause"
+msgid "Approximately %d minute to the next break."
+msgid_plural "Approximately %d minutes to the next break."
+msgstr[0] "Ungefähr %d Minute bis zur nächsten Pause."
+msgstr[1] "Ungefähr %d Minuten bis zur nächsten Pause."
 
-#: ../../../po/../src/drwright.c:452
-#, c-format
-msgid "Less than one minute until the next break"
-msgstr "Weniger als eine Minute bis zur nächsten Pause"
+#: ../src/drwright.c:177
+msgid "Less than one minute to the next break."
+msgstr "Weniger als eine Minute bis zur nächsten Pause."
 
-#: ../../../po/../src/drwright.c:553
-#, c-format
-msgid ""
-"Unable to bring up the typing break properties dialog with the following "
-"error: %s"
-msgstr ""
-"Der Tipppausen-Eigenschaftsdialog konnte auf Grund folgenden Fehlers nicht "
-"angezeigt werden: %s"
+#: ../src/drwright.c:189
+msgid "Settings…"
+msgstr "Einstellungen …"
 
-#: ../../../po/../src/drwright.c:572
-msgid "Written by Richard Hult <richard@imendio.com>"
-msgstr "Geschrieben von Richard Hult <richard@imendio.com>"
-
-#: ../../../po/../src/drwright.c:573
-msgid "Eye candy added by Anders Carlsson"
-msgstr "Augenschmaus von Anders Carlsson"
-
-#: ../../../po/../src/drwright.c:582
-msgid "A computer break reminder."
-msgstr "Ein Pausenerinnerer für den Computer."
-
-#: ../../../po/../src/drwright.c:584
-msgid "translator-credits"
-msgstr ""
-"Christian Kintner <mail@christian-kintner.de>\n"
-"Hendrik Richter <hendrikr@gnome.org>\n"
-"Christian Kirbach <christian.kirbach@googlemail.com>\n"
-"Mario Blättermann <mariobl@gnome.org>"
+#: ../src/drwright.c:193
+msgid "Take Break Now"
+msgstr "Jetzt Pause machen"
 
 # CHECK
-#: ../../../po/../src/drw-break-window.c:189
+#: ../src/drw-break-window.c:189
 msgid "_Postpone Break"
 msgstr "Pause _verschieben"
 
-#: ../../../po/../src/drw-break-window.c:234
+#: ../src/drw-break-window.c:234
 msgid "Take a break!"
 msgstr "Zeit für eine Tipppause!"
 
@@ -172,12 +131,12 @@ msgid "Whether typing break is enabled"
 msgstr "Legt fest, ob der Pausenerinnerer aktiviert ist."
 
 #: ../src/gnome-typing-break-panel.desktop.in.in.h:1
-msgid "Typing Break Preferences"
-msgstr "Einstellungen für Tipppausen"
+msgid "Change typing break settings"
+msgstr "Tipppausen-Einstellungen ändern"
 
 #: ../src/gnome-typing-break-panel.desktop.in.in.h:2
-msgid "Typing Break preferences panel"
-msgstr "Einstellungspanel für Tippausen"
+msgid "Typing Break"
+msgstr "Tipppause"
 
 #. Translators: those are keywords for the example control-center panel
 #: ../src/gnome-typing-break-panel.desktop.in.in.h:4
@@ -200,8 +159,3 @@ msgstr "Bildschirm sperren und so eine _Tipppause erzwingen"
 msgid "_Work interval lasts:"
 msgstr "_Arbeitsintervall dauert:"
 
-#~ msgid "Take a break now (next in %dm)"
-#~ msgstr "Jetzt eine Pause einlegen (nächste in %dm)"
-
-#~ msgid "Take a break now (next in less than one minute)"
-#~ msgstr "Jetzt eine Pause einlegen (nächste in weniger als einer Minute)"
