--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Typing Break 3.2.0
+==================
+
+* Work with GNOME Control Centre 3.2.x
+* Translation updates
+
 Typing Break 3.0.2
 ==================
 
