--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Typing Break 3.2.3
+==================
+
+- Add Lock button to break screen (#128381)
+- Translation updates
+
 Typing Break 3.2.2
 ==================
 
